--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ h4 {
     font-family: Arial, Helvetica, sans-serif;
 
 }
+p{
+    font-size: 20px;
+    color: #A52A2A;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 .center {
     display: flex;
@@ -20,3 +25,16 @@ h4 {
     display: flex;
     justify-content: space-around;
 }
+
+.button {
+    background-color: #D2691E; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    border-radius: 12px;
+}
+
