--- a/style.css
+++ b/style.css
@@ -38,3 +38,22 @@ p{
     border-radius: 12px;
 }
 
+a:link {
+    color: #D2691E;
+  }
+  
+  /* visited link */
+  a:visited {
+    color: #A52A2A;
+  }
+  
+  /* mouse over link */
+  a:hover {
+    color: orange;
+  }
+  
+  /* selected link */
+  a:active {
+    color: orangered;
+  }
+
