--- a/style.css
+++ b/style.css
@@ -15,6 +15,33 @@ p{
     color: #A52A2A;
     font-family: Arial, Helvetica, sans-serif;
 }
+.pfp {
+    border-radius: 70%;
+    height: auto;
+    width: 50%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+.title {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: auto;
+    padding: 10px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+}
+.bio {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-left: auto;
+    padding: 0px;
+
+}
 
 .center {
     display: flex;
@@ -29,6 +56,13 @@ p{
 
 }
 
+.col-width {
+    width: 30%;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .button {
     background-color: #D2691E; /* Green */
     border: none;
@@ -40,6 +74,10 @@ p{
     font-size: 15px;
     border-radius: 12px;
 }
+
+
+
+
 
 a:link {
     color: #D2691E;
