--- a/style.css
+++ b/style.css
@@ -43,6 +43,12 @@ p{
 
 }
 
+.reviews {
+    text-align: center;
+    display: block;
+    margin: auto;
+}
+
 .center {
     display: flex;
     justify-content: center;
