--- a/style.css
+++ b/style.css
@@ -23,6 +23,16 @@ p{
     display: flex;
     justify-content: center;
 }
+
+.gallery {
+    height: 50%;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 10px, 10px, 10px, 10px;
+    margin:auto;
+}
 .title {
     text-align: center;
     display: flex;
@@ -81,8 +91,38 @@ p{
     border-radius: 12px;
 }
 
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
 
+.column {
+    flex: 25%;
+    max-width: 25%;
+}
 
+.column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 80%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+    .column {
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column {
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
 
 
 a:link {
